[package]
name = "cybou"
version = "0.5.1"
edition = "2021"
build = "build.rs"

[dependencies]
slint = "1.6"
bip39 = "2.0"
pbkdf2 = { version = "0.12", features = ["std"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
pqc_kyber = "0.7"
pqc_dilithium = "0.2"
tar = "0.4"
flate2 = "1.0"
notify = "6.1"
blake3 = "1.5"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
zeroize = { version = "1.7", features = ["derive"] }
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
rfd = "0.14"
base64 = "0.21"
tray-icon = "0.14"
aws-config = "1.0"
aws-sdk-s3 = "1.0"
aws-types = "1.0"
image = "0.24"
tempfile = "3.0"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
slint-build = "1.6"
